--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "apollo-server": "^3.10.2",
     "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.4.0"
   }
 }
