--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^3.10.2",
     "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
