--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "apollo-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^4.4.0",
-    "apollo-server": "^3.10.2",
-    "dotenv": "^16.0.2",
-    "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.0",
-    "mysql": "^2.18.1"
-  },
-  "devDependencies": {
-    "prisma": "^4.4.0"
-  }
+    "name": "apollo-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "analis": "npx prisma db pull",
+        "generate": "npx prisma generate"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^4.4.0",
+        "apollo-server": "^3.10.2",
+        "dotenv": "^16.0.2",
+        "graphql": "^16.6.0",
+        "graphql-scalars": "^1.20.0",
+        "mysql": "^2.18.1"
+    },
+    "devDependencies": {
+        "prisma": "^4.4.0"
+    }
 }
