--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dependencies": {
         "@prisma/client": "^4.4.0",
         "apollo-server": "^3.10.2",
-        "dotenv": "^16.0.2",
+        "bcrypt": "^5.1.0",
+        "dotenv": "^16.0.3",
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.20.0",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1"
     },
     "devDependencies": {
