--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "dotenv": "^16.0.3",
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.20.0",
-        "jsonwebtoken": "^8.5.1",
-        "mysql": "^2.18.1"
+        "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
         "prisma": "^4.4.0"
