--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.0.3",
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.20.0",
+        "graphql-upload": "^16.0.2",
         "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
