--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.20.0",
         "graphql-upload": "^16.0.2",
-        "jsonwebtoken": "^8.5.1"
+        "jsonwebtoken": "^8.5.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "prisma": "^4.4.0"
